Cleans up sentinel ami process.

--- a/ami/cosmovisor_provenanced.conf
+++ b/ami/cosmovisor_provenanced.conf
@@ -6,5 +6,9 @@ command=/home/ubuntu/go/bin/cosmovisor start -t --log_level=info --log_format=pl
 user=ubuntu
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/provenanced.err.log
-stdout_logfile=/var/log/provenanced.out.log
+stderr_logfile=/var/log/provenanced.out.log
+stderr_logfile_maxbytes=100000000
+stderr_logfile_backups=20
+stdout_logfile=/var/log/provenanced.empty.out.log
+stdout_logfile_maxbytes=100000000
+stdout_logfile_backups=0
