Fix leveldb link specifically in 1.0.0 provenance.

--- a/ami/cosmovisor_provenanced.conf
+++ b/ami/cosmovisor_provenanced.conf
@@ -1,5 +1,5 @@
 [supervisord]
-environment=HOME="/home/ubuntu",USER="ubuntu",PIO_HOME="/home/ubuntu",LD_LIBRARY_PATH="/home/ubuntu/cosmovisor/current/bin",DAEMON_HOME="/home/ubuntu",DAEMON_NAME="provenanced",DAEMON_ALLOW_DOWNLOAD_BINARIES="true",DAEMON_RESTART_AFTER_UPGRADE="false"
+environment=HOME="/home/ubuntu",USER="ubuntu",PIO_HOME="/home/ubuntu",LD_LIBRARY_PATH="/home/ubuntu/cosmovisor/current/bin:/usr/local/lib",DAEMON_HOME="/home/ubuntu",DAEMON_NAME="provenanced",DAEMON_ALLOW_DOWNLOAD_BINARIES="true",DAEMON_RESTART_AFTER_UPGRADE="false",DAEMON_BACKUP_DATA_DIR="/home/ubuntu/data"
 
 [program:cosmovisor_provenanced]
 command=/home/ubuntu/go/bin/cosmovisor start -t --log_level=info --log_format=plain
